Added a warning about doc.

--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
 
 <p>I have written a blog using <code>tartempion</code>. The repository is available there: <a href="https://github.com/Ralt/tartempion-blog">tartempion-blog</a>.</p>
 
+<h2>Documentation</h2>
+
+Coming up soon.
+
 <h2>Roadmap</h2>
 
 <ul>
