--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 <h2>Documentation</h2>
 
-Coming up soon.
+<p>Coming up soon on [the wiki](https://github.com/Ralt/tartempion/wiki).</p>
 
 <h2>Roadmap</h2>
 
