Fix a little mistake.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 <h2>Documentation</h2>
 
-<p>Coming up soon on [the wiki](https://github.com/Ralt/tartempion/wiki).</p>
+<p>Coming up soon on <a href="https://github.com/Ralt/tartempion/wiki">the wiki</a>.</p>
 
 <h2>Roadmap</h2>
 
