fix little mistake

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <ul>
     <li>You want to reuse parts of your code across different projects.</li>
     <li>You want to inject dependencies without thinking about it.</li>
-    <li>You want [express](http://expressjs.com) but you feel like it's too slow to set up a new project.</li>
+    <li>You want <a href="http://expressjs.com">express</a> but you feel like it's too slow to set up a new project.</li>
     <li>You want to have well-organized projects.</li>
 </ul>
 
