--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!doctype html>
-<html>
+<!doctype html> <html>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
@@ -57,18 +56,18 @@
 <h2>Roadmap</h2>
 
 <ul>
-<li>Add middlewares support ✓</li>
-<li>Add views helpers support ✓</li>
-<li>Add database support ✓</li>
-<li>Add a more thorough config.json file ✓</li>
-<li>Create a useful sample app ✓ ([done][5])</li>
-<li>Refactor the core.js file ✓</li>
-<li>Create a module pushable to npm ✓</li>
-<li>Push to npm ✓</li>
-<li>Create a CLI interface to use tartempion globally ∞</li>
-<li>Create a mocha interface to test the pies (individually or all together) ✕</li>
-<li>Create tests for tartempion ✕</li>
-<li>Update the documentation ✕</li>
+<li>Add middlewares support &#10003;</li>
+<li>Add views helpers support &#10003;</li>
+<li>Add database support &#10003;</li>
+<li>Add a more thorough config.json file &#10003;</li>
+<li>Create a useful sample app &#10003; ([done][5])</li>
+<li>Refactor the core.js file &#10003;</li>
+<li>Create a module pushable to npm &#10003;</li>
+<li>Push to npm &#10003;</li>
+<li>Create a CLI interface to use tartempion globally &infin;</li>
+<li>Create a mocha interface to test the pies (individually or all together) &#10005;</li>
+<li>Create tests for tartempion &#10005;</li>
+<li>Update the documentation &#10005;</li>
 </ul><h2>License</h2>
 
 <p>The MIT License (MIT)</p>
