--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <h2>Installation</h2>
 
-<pre><code>npm install tartempion
+<pre><code>npm install tartempion -g
 </code></pre>
 
 <h2>Example application</h2>
@@ -57,18 +57,11 @@
 <h2>Roadmap</h2>
 
 <ul>
-<li>Add middlewares support &#10003;</li>
-<li>Add views helpers support &#10003;</li>
-<li>Add database support &#10003;</li>
-<li>Add a more thorough config.json file &#10003;</li>
-<li>Create a useful sample app &#10003; ([done][5])</li>
-<li>Refactor the core.js file &#10003;</li>
-<li>Create a module pushable to npm &#10003;</li>
-<li>Push to npm &#10003;</li>
-<li>Create a CLI interface to use tartempion globally &infin;</li>
-<li>Create a mocha interface to test the pies (individually or all together) &#10005;</li>
+<li>Create a mocha interface to test the pies (individually or all together) &infin;</li>
 <li>Create tests for tartempion &#10005;</li>
 <li>Update the documentation &#10005;</li>
+<li>Add session store support &#10005;</li>
+<li>Add support for other databases &#10005;</li>
 </ul><h2>License</h2>
 
 <p>The MIT License (MIT)</p>
