--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 
 <h2>Documentation</h2>
 
-<p>Coming up soon <a href="http://margaine.com/tartempion/documentation.html">here</a>.</p>
+<p>Coming up soon <a href="http://margaine.com/tartempion/documentation/documentation.html">here</a>.</p>
 
 <h2>Roadmap</h2>
 
-<p>The full roadmap is constantly changing. For a full roadmap, see <a href="https://github.com/Ralt/tartempion/issues?labels=roadmap">the issues tagged with "roadmap"</a>.
+<p>The roadmap is constantly changing. For a full roadmap, see <a href="https://github.com/Ralt/tartempion/issues?labels=roadmap">the issues tagged with "roadmap"</a>.
 
 <h2>License</h2>
 
