First chapter of documentation done

--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -31,6 +31,21 @@ PRE { font-family: monospace }
 <BR>
 <BR><B><A HREF="#5">5. Express</A></B><HR NOSHADE>
 <H1><A NAME="1">1. Installation</A></H1>
+<P>Installing tartempion is easy. Just run the following:</P>
+<PRE><CODE>npm install -g tartempion</CODE></PRE>
+<P>Don't forget the <CODE>-g</CODE> parameter to install it globally. It
+ may require you to run this as root though. If you only install it
+ locally, using the command-line utility will be more painful. (You'll
+ have to use it this way: <CODE>node node_modules/.bin/tartempion</CODE>
+, which is a pain.)</P>
+<P>If you want to get the last version from the git repository, here are
+ the instructions:</P>
+<PRE><CODE>git clone https://github.com/Ralt/tartempion
+cd tartempion
+# x.y.z is the current last version
+git checkout x.y.z</CODE></PRE>
+<P>tartempion's release management only uses git tags. The master branch
+ is the one being used for development.</P>
 <HR NOSHADE>
 <H1><A NAME="2">2. Command-line interface</A></H1>
 <HR NOSHADE>
