Fixed wrong links

--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -168,7 +168,8 @@ Options:
 <LI><CODE>database</CODE>: about the database used.</LI>
 <LI><CODE>test engine</CODE>: about the test engine used.</LI>
 </UL>
-<P>You can see an example of a basic <CODE>config.json</CODE> [here][1].</P>
+<P>You can see an example of a basic <CODE>config.json</CODE> <A href="https://github.com/Ralt/tartempion/blob/master/cli/default/project/config.json">
+here</A>.</P>
 <H2><A NAME="3_1">3.1. server</A></H2>
 <P>The <CODE>server</CODE> part has the following properties:</P>
 <UL>
@@ -192,18 +193,12 @@ Options:
  the database used. Depending on the database used, the properties
  differ.</P>
 <H3><A NAME="3_4_1">3.4.1. mongodb</A></H3>
-<P>For <CODE>mongodb</CODE>, you can read [the official
- documentation][2] to see what are the options.</P>
+<P>For <CODE>mongodb</CODE>, you can read <A href="http://mongodb.github.com/node-mongodb-native/api-generated/db.html">
+the official documentation</A> to see what are the options.</P>
 <H2><A NAME="3_5">3.5. test engine</A></H2>
 <P>The <CODE>test engine</CODE> part has only this property for now:</P>
 <UL>
-<LI>
-<P><CODE>name</CODE>: name of the test engine used.</P>
-<P>[1]:
- https://github.com/Ralt/tartempion/blob/master/cli/default/project/config.json
- [2]:
- http://mongodb.github.com/node-mongodb-native/api-generated/db.html</P>
-</LI>
+<LI><CODE>name</CODE>: name of the test engine used.</LI>
 </UL>
 <HR NOSHADE>
 <H1><A NAME="4">4. Pies</A></H1>
