--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -2,7 +2,7 @@
 <html><head>
 <meta charset="utf-8">
 <title>Official documentation of tartempion</title>
-</head><body>
+<style>body {    width: 960px;    margin: auto;}.title {    font-size: 250%;    font-weight: bold;    text-align: center;    margin: 20px;}.toc li {    list-style: none;}</style></head><body>
 <div class="title">Official documentation of tartempion</div>
 
 <div class="toc">
@@ -187,5 +187,7 @@ to see what are the options.</p>
 </ul>
 <h1 id="4-pies">4. Pies</h1>
 <h1 id="5-express">5. Express</h1>
+
+<div class="copyright">Documentation generated with <a href="https://npmjs.org/package/docgenerator">docgenerator</a>.</div><script>( function() {    "use strict";}());</script>
 </body></html>
 
