--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -2,7 +2,7 @@
 <html><head>
 <meta charset="utf-8">
 <title>Official documentation of tartempion</title>
-<style>body {    width: 960px;    margin: auto;}.title {    font-size: 250%;    font-weight: bold;    text-align: center;    margin: 20px;}.toc li {    list-style: none;}</style></head><body>
+<style>body {    width: 960px;    margin: auto;}.title {    font-size: 250%;    font-weight: bold;    text-align: center;    margin: 20px;}.toc li {    list-style: none;}.copyright {    text-align: center;    margin: 20px;    font-style: italic;}</style></head><body>
 <div class="title">Official documentation of tartempion</div>
 
 <div class="toc">
