--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -2,7 +2,26 @@
 <html><head>
 <meta charset="utf-8">
 <title>Official documentation of tartempion</title>
-<style>body {    width: 960px;    margin: auto;}.title {    font-size: 250%;    font-weight: bold;    text-align: center;    margin: 20px;}.toc li {    list-style: none;}.copyright {    text-align: center;    margin: 20px;    font-style: italic;}</style></head><body>
+<style>
+body {
+    width: 960px;
+    margin: auto;
+}
+.title {
+    font-size: 250%;
+    font-weight: bold;
+    text-align: center;
+    margin: 20px;
+}
+.toc li {
+    list-style: none;
+}
+.copyright {
+    text-align: center;
+    margin: 20px;
+    font-style: italic;
+}
+</style></head><body>
 <div class="title">Official documentation of tartempion</div>
 
 <div class="toc">
@@ -49,7 +68,7 @@ git checkout x.y.z
 being used for development.</p>
 <h1 id="2-command-line-interface">2. Command-line interface</h1>
 <p>tartempion provides a command-line utility to generate projects, pies,
-and also to run the tests or the application. (You will find out <a href="#4">later</a>
+and also to run the tests or the application. (You will find out <a href="#4-pies">later</a>
 what a pie is, please be patient. For now, just think it's an entity.)</p>
 <h2 id="21-getting-help">2.1. Getting help</h2>
 <p>I believe that every project shouldn't need documentation. This is why
@@ -188,6 +207,11 @@ to see what are the options.</p>
 <h1 id="4-pies">4. Pies</h1>
 <h1 id="5-express">5. Express</h1>
 
-<div class="copyright">Documentation generated with <a href="https://npmjs.org/package/docgenerator">docgenerator</a>.</div><script>( function() {    "use strict";}());</script>
+<div class="copyright">Documentation generated with <a href="https://npmjs.org/package/docgenerator">docgenerator</a>.</div>
+<script>
+( function() {
+    "use strict";
+}());
+</script>
 </body></html>
 
